--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/home.css">
         <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
         <script src="/js/transitions.js"></script>
-        <script src="vendor/jquery-3.4.1.min.js"></script></script>
+        <script src="vendor/jquery-3.4.1.min.js"></script>
         <script>
             $(function() {
                 $("#navbar-container").load("/navbar.html");
@@ -35,10 +35,6 @@
             <div id="content-wrap">
 
             <div id="navbar-container"></div>
-            <!-- <div id="settings-message">
-              Too dark?
-              Try light mode.
-            </div> -->
 
                 <div id="info">
                     <div id="myname">
@@ -85,7 +81,7 @@
 
         </div>
 
-    <script src="/js/home-artwork.js"></script>
+        <script src="/js/home-artwork.js"></script>
         <script src="/js/settings.js"></script>
 
   </body>
