added ronin link

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,10 @@
             </div>
 
             <div class="contact-logo-container">
+              <a href="http://ronininstitute.org/research-scholars/semidan-robaina-estevez/" target="_blank"><img class="contact-logo" id="ronin-logo" src="/imgs/ronin-logo.png" alt="image"></a>
+            </div>
+
+            <div class="contact-logo-container">
               <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github-logo" src="#" alt="image"></a>
             </div>
 
