--- a/footer.html
+++ b/footer.html
@@ -5,8 +5,9 @@
     <a href="/home"><img src="/imgs/my-logo.png" alt="my logo" class="footer-contact-logo" id="my-footer-logo"></a>
 
     <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="footer-contact-logo" id="mail-logo" src="/imgs/email.png" alt="image"></a>
-    <a href="https://github.com/Robaina" target="_blank"><img class="footer-contact-logo" id="github-logo" src="/imgs/github_icon_light.png" alt="image"></a>
+    <a href="http://ronininstitute.org/research-scholars/semidan-robaina-estevez/" target="_blank"><img class="footer-contact-logo" id="ronin-logo" src="/imgs/ronin-logo.png" alt="image"></a>
     <a href="https://www.linkedin.com/in/semidan-robaina" target="_blank"><img class="footer-contact-logo" id="linkedin-logo" src="/imgs/linkedin.png" alt="image"></a>
+    <a href="https://github.com/Robaina" target="_blank"><img class="footer-contact-logo" id="github-logo" src="/imgs/github_icon_light.png" alt="image"></a>
     <a href="https://twitter.com/srobainae" target="_blank"><img class="footer-contact-logo" id="twitter-logo" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
   </div><!--
 
