--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/about.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
-    <script src="vendor/jquery-3.4.1.min.js"></script></script>
+    <script src="vendor/jquery-3.4.1.min.js"></script>
     <script src="/js/transitions.js"></script>
     <script src="/js/settings.js"></script>
     <script>
