--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,9 @@
   <a class="navbar-item" id="home" href="/home">Home</a>
 
   <!-- <div class="navbar-item" id="about" onclick="goToPage('/about')">About me</div> -->
-  <a class="navbar-item" id="about" href="/about" onmouseover="expandAbout()">About me</a>
+  <a class="navbar-item" id="about" href="/about">About me</a>
+
+  <a class="navbar-item" id="resume" href="/resume">Résumé</a>
 
   <!-- <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div> -->
   <a class="navbar-item" id="research" href="/research">Research</a>
