--- a/apps.html
+++ b/apps.html
@@ -45,7 +45,7 @@
                 <div id="grid_container">
 
                     <div class="grid_item" tabindex="0">
-                        <div class="grid_item_title">Magin n-Gon</div>
+                        <div class="grid_item_title">Magic n-Gon</div>
                         <img class="thumbnail" src="/imgs/apps/n-gon.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Magic-N-gon/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Magic-N-gon" target="_blank">Code</a></button>
