--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2019)</div>
                 </div>
                 <div id="tag-container">
-                  <div class="topictag Preprint"></div>
+                  <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/FluxOrderRelation.png" alt="Responsive image">
                 <p class="content_preview">We present a new hierarchical organization of <i>Escherichia coli</i>'s metabolic network which is based on the flux values that reactions take at steady state. We show that <sup>13</sup>C-derived fluxes, transcript and protein levels and enzyme k<sub>cat</sub> values are in agreement with the hierarchy.</p>
