--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Social media meta information -->
-		<!-- <meta property="og:title" content="Personal webpage"> -->
-    <!-- <meta property="og:description" content="Personal webpage of Dr. Semidán Robaina Estévez. Researcher, data scientist and web developer"> -->
+		<meta property="og:title" content="Personal webpage">
+    <meta property="og:description" content="Personal webpage of Dr. Semidán Robaina Estévez. Researcher, data scientist and web developer">
     <meta property="og:image" content="https://semidanrobaina.com/imgs/media_thumbnail.png">
-    <!-- <meta property="og:url" content="http://euro-travel-example.com/index.htm"> -->
+    <meta property="og:url" content="https://semidanrobaina.com/index.html">
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
 
 		<title>Semidán's site</title>
