--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/FluxOrderRelation.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/FluxOrderRelation.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">We present a new hierarchical organization of <i>Escherichia coli</i>'s metabolic network which is based on the flux values that reactions take at steady state. We show that <sup>13</sup>C-derived fluxes, transcript and protein levels and enzyme k<sub>cat</sub> values are in agreement with the hierarchy.</p>
               </div>
             </a>
@@ -66,7 +66,7 @@
                 <div id="tag-container">
                   <div class="topictag Ongoing"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/TFBApaper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/TFBApaper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Experimental observation in <i>E. coli</i> has shown that the concentrations of certain metabolite pairs exhibit an ordering, i.e., one metabolite has always a higher concentration than another, when the system is at steady state. Here, I employ thermodynamic flux balance analysis to derive an ordering of metabolite concentrations in <i>Escherichia coli</i>.</p>
               </div>
             </a>
@@ -82,7 +82,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/Thesis.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/Thesis.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Cells regulate the activity through metabolic reactions in a context-specific way. The context-specificity of metabolism can be captured by several kinds of experimental data, such as by gene and protein expression or metabolite profiles. This thesis is composed of three individual studies focusing on context-specific experimental data integration into computational models of metabolism aiming at providing context-specific metabolic predictions.</p>
               </div>
             </a>
@@ -98,7 +98,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/AOpaper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/AOpaper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Recent methodological developments have aimed at reconstructing context-specific metabolic models from high-throughput data. However, a unique reconstruction is often not guaranteed. Here, we explore this issue and propose possible solutions.</p>
               </div>
             </a>
@@ -114,7 +114,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/GCpaper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/GCpaper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Photosynthesis and water use efficiency, key factors affecting plant growth, are directly controlled by the guard cells. Here, we used constraint-based modeling to predict the differences in metabolic fluxes between the mesophyll and guard cells of <i>Arabidopsis thaliana</i>. An independent <sup>13</sup>C-labeling experiment provides support for our predictions.</p>
               </div>
             </a>
@@ -130,7 +130,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/C4paper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/C4paper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Existing experimental studies have indicated that the emergence of the C<sub>4</sub> photosynthesis requires co-ordination between several levels of cellular organization, from gene regulation to metabolism. Here, we utilize flux coupling analysis with maize metabolic models to investigate the correspondence between metabolic network structure and transcriptomic phenotypes along the maize leaf gradient.</p>
               </div>
             </a>
@@ -146,7 +146,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/RegrExpaper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/RegrExpaper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Context-specific metabolic models aim at describing metabolism under specific scenarios (e.g., cell types). Here, we introduce RegrEx, a fully automated method to reconstruct context-specific metabolic models that relies solely on context-specific data and ℓ<sub>1</sub>-norm regularization to extract a context-specific model.</p>
               </div>
             </a>
@@ -162,7 +162,7 @@
                 <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
-                <img class="thumbnail" src="imgs/research/Frameworkpaper.png" alt="Responsive image">
+                <img class="thumbnail" src="imgs/research/Frameworkpaper.png" alt="Responsive image" loading="lazy">
                 <p class="content_preview">Several methods have been proposed to reconstruct context-specific models from existing genome-scale models by integrating various types of high-throughput data. Here we present a mathematical framework that puts all existing methods under one umbrella and provides the means to better understand their functioning, highlight similarities and differences, and to help users in selecting a most suitable method for an application.</p>
               </div>
             </a>
