--- a/apps.html
+++ b/apps.html
@@ -46,84 +46,84 @@
 
                   <div class="grid_item" tabindex="0">
                       <div class="grid_item_title">Cruceros en Tenerife</div>
-                      <img class="thumbnail" src="/imgs/apps/crucerosTenerife.png" alt="Responsive image">
+                      <img class="thumbnail" src="/imgs/apps/crucerosTenerife.png" alt="Responsive image" loading="lazy">
                       <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/crucerosTenerife/" target="_blank">Deploy</a></button>
                       <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/crucerosTenerife" target="_blank">Code</a></button>
                   </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Magic n-Gon</div>
-                        <img class="thumbnail" src="/imgs/apps/n-gon.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/n-gon.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/Magic-N-gon/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Magic-N-gon" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Google Trends</div>
-                        <img class="thumbnail" src="/imgs/apps/googletrends.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/googletrends.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/googleTrends/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/googleTrends" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Square Spiral</div>
-                        <img class="thumbnail" src="/imgs/apps/squares.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/squares.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/SquareSpiral/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SquareSpiral" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Pentagram of Venus</div>
-                        <img class="thumbnail" src="/imgs/apps/pentagram.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/pentagram.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/VenusPentagram/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Sudoku solver</div>
-                        <img class="thumbnail" src="/imgs/apps/sudoku.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/sudoku.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/Sudoku/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Metabolic flux ordering</div>
-                        <img class="thumbnail" src="/imgs/apps/fluxorders.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/fluxorders.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/fluxOrders/fluxOrderDAG" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Ayumu's game</div>
-                        <img class="thumbnail" src="/imgs/apps/ayumu.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/ayumu.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/AyumuGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Simon game</div>
-                        <img class="thumbnail" src="/imgs/apps/simon.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/simon.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/SimonGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Colorful N-Mobius</div>
-                        <img class="thumbnail" src="/imgs/apps/mobiusart.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/mobiusart.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/mobiusArt/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Oblate Spheroidal</div>
-                        <img class="thumbnail" src="/imgs/apps/oblatespheroidal.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/oblatespheroidal.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/OblateSpheroidal/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Function plotter</div>
-                        <img class="thumbnail" src="/imgs/apps/functionplotter.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/functionplotter.png" alt="Responsive image" loading="lazy">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/functionPlotter/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
                     </div>
