added new research

--- a/research.html
+++ b/research.html
@@ -73,6 +73,22 @@
           </div>
 
           <div class="grid_item" tabindex="0">
+            <a class="entry_link" href="https://github.com/Robaina/Metabolic_Transition_Analysis" target="_blank">
+              <div class="grid_item_content">
+                <div class="grid_item_header">
+                  <div class="grid_item_title">Optimal space of concentration dynamics</div>
+                  <div class="grid_item_authors">Robaina-Est&eacute;vez (2019)</div>
+                </div>
+                <div id="tag-container">
+                  <div class="topictag Ongoing"></div>
+                </div>
+                <img class="thumbnail" src="imgs/research/MTApaper.png" alt="Responsive image" loading="lazy">
+                <p class="content_preview">Constraint-based metabolic modeling has proven to be instrumental to investigate the space of reaction fluxes at steady state in a metabolic network. However, this technique alone does not allow to evaluate the concentration dynamics allowed by the network. Here, we propose a method to explore the space of alternative optimal concentration trajectories using constraint-based modeling.</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="grid_item" tabindex="0">
             <a class="entry_link" href="https://publishup.uni-potsdam.de/frontdoor/index/index/docId/40136" target="_blank">
               <div class="grid_item_content">
                 <div class="grid_item_header">
