--- a/wrongbrowser.html
+++ b/wrongbrowser.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html translate="no" lang="en" dir="ltr">
+<html translate="no" class="notranslate" lang="en" dir="ltr">
 
 	<head>
 		<meta charset="UTF-8">
