--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@
             <li>Python, R, MATLAB, Jupyter Notebooks, JavaScript, HTML5, CSS3.</li>
             <li>Convex optimization, mathematical modeling, network science, machine learning, omics data analysis, data visualization.</li>
             <li>Scientific writing, LatEx, Git, GitHub.</li>
-            <li>Spanish, English.</li>
+            <li>Spanish, English, ein bisschen Deutsch</li>
           </ul>
 
         </article>
