--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
   <a class="navbar-item" id="resume" href="/resume">Résumé</a>
 
   <!-- <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div> -->
-  <a class="navbar-item" id="research" href="/research">Research</a>
+  <a class="navbar-item" id="research" href="/research">Projects</a>
 
   <!-- <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div> -->
   <a class="navbar-item" id="blog" href="/blog">Blog</a>
