--- a/research.html
+++ b/research.html
@@ -57,6 +57,22 @@
           </div>
 
           <div class="grid_item" tabindex="0">
+            <a class="entry_link" href="https://github.com/Robaina/BRENDA_database" target="_blank">
+              <div class="grid_item_content">
+                <div class="grid_item_header">
+                  <div class="grid_item_title">A python parser for BRENDA</div>
+                  <div class="grid_item_authors">Robaina-Est&eacute;vez (2020)</div>
+                </div>
+                <div id="tag-container">
+                  <div class="topictag Ongoing"></div>
+                </div>
+                <img class="thumbnail" src="imgs/research/Brendaparser.png" alt="Responsive image" loading="lazy">
+                <p class="content_preview"><a href="https://www.brenda-enzymes.org/" target="_blank">BRENDA</a> is a well known database which collects information about known enzymes across species. Even though it provides an API to request data entries, I found it useful to develop my own parser in python, so I could retrieve and filter data more efficiently. This is an ongoing projects, perhaps you find it useful!</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="grid_item" tabindex="0">
             <a class="entry_link" href="https://github.com/Robaina/concentrationOrders" target="_blank">
               <div class="grid_item_content">
                 <div class="grid_item_header">
