--- a/resume.html
+++ b/resume.html
@@ -56,6 +56,7 @@
           </ul>
           <h1>Experience</h1>
           <ul>
+            <li>Freelance Data Scientist, July 2020.</li>
             <li>Research scholar, September 2019. Ronin Institute.</li>
             <li>Postdoc, October 2017 - December 2018. Bioinformatics department, University of Potsdam.</li>
             <li>IMPRS Ph.D. student,  October 2013 - September 2017. Max Planck Institute of Molecular Plant Physiology.</li>
