--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,7 @@
             <li>Ph.D. in Systems Biology (<i>Magna Cum Laude</i>), September 2017. Max Planck Institute of Molecular Plant Physiology and University of Potsdam.</li>
             <li>M.Sc. in Biotechnology, July 2013. University of La Laguna.</li>
             <li>Licenciatura in Biology (focus on Molecular and Cell Biology), March 2012. University of La Laguna.</li>
+            <li>Certified as university teacher by the Spanish agency ANECA (Profesor Ayudante Doctor)</li>
           </ul>
           <h1>Experience</h1>
           <ul>
