--- a/apps.html
+++ b/apps.html
@@ -45,6 +45,13 @@
                 <div id="grid_container">
 
                   <div class="grid_item" tabindex="0">
+                      <div class="grid_item_title">Cayley-Dickson Calculator</div>
+                      <img class="thumbnail" src="/imgs/apps/cayley-dickson.png" alt="Responsive image" loading="lazy">
+                      <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/cayley-dickson-calculator/" target="_blank">Deploy</a></button>
+                      <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/cayley-dickson-calculator" target="_blank">Code</a></button>
+                  </div>
+
+                  <div class="grid_item" tabindex="0">
                       <div class="grid_item_title">Cruceros en Tenerife</div>
                       <img class="thumbnail" src="/imgs/apps/crucerosTenerife.png" alt="Responsive image" loading="lazy">
                       <button class="button deployButton" type="button"><a class="grid_link" href="https://semidanrobaina.com/crucerosTenerife/" target="_blank">Deploy</a></button>
