--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,8 @@
           </ul>
           <h1>Experience</h1>
           <ul>
-            <li>Freelance Data Scientist, July 2020.</li>
+            <li>Bioinformatician, March 2021. University of La Laguna.</li>
+            <li>Freelance Data Scientist, July 2020 - February 2021.</li>
             <li>Research scholar, September 2019. Ronin Institute.</li>
             <li>Postdoc, October 2017 - December 2018. Bioinformatics department, University of Potsdam.</li>
             <li>IMPRS Ph.D. student,  October 2013 - September 2017. Max Planck Institute of Molecular Plant Physiology.</li>
